Re-added exit fast step

--- a/.github/workflows/cpp-linter.yml
+++ b/.github/workflows/cpp-linter.yml
@@ -62,3 +62,7 @@ jobs:
         passive-reviews: true
         version: 14
 
+    - name: Fail fast?!
+      if: steps.linter.outputs.clang-tidy-checks-failed > 0
+      run: exit 1
+
