--- a/.github/workflows/ubuntu-binary-ROOT.yml
+++ b/.github/workflows/ubuntu-binary-ROOT.yml
@@ -63,6 +63,10 @@ jobs:
       run: |
         echo "build-output-dir=${{github.workspace}}/build" >> "$GITHUB_OUTPUT"
         
+    - name: Update packages
+      run: |
+        sudo apt-get update
+        
     - name: Install packages
       run: |
         sudo apt-get install binutils cmake dpkg-dev g++ gcc libssl-dev git libx11-dev libxext-dev libxft-dev libxpm-dev python3 gfortran libpcre3-dev xlibmesa-glu-dev libglew-dev libftgl-dev libmysqlclient-dev libfftw3-dev libcfitsio-dev graphviz-dev libavahi-compat-libdnssd-dev libldap2-dev python3-dev python3-numpy libxml2-dev libkrb5-dev libgsl0-dev nlohmann-json3-dev libtbb-dev
